--- a/lab-07.Rmd
+++ b/lab-07.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Lab 07 - Modelling course evaluations"
-author: "INSERT NAME HERE"
+author: "Xiaoduo Yang"
 date: "`r Sys.Date()`"
 output: html_document
 ---
